now it displays team name and team id respectively on the html

--- a/playing-with-soccer-api.html
+++ b/playing-with-soccer-api.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     
-<div id="scoreDiv"></div>
+<div id="teamContainer"></div>
+
+
 
     <script src="./20200118-soccerApi.js"></script>
 </body>
